# clawx-rust

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/components/: Channels.tsx  Chat.tsx  Cron.tsx  Models.tsx  Settings.tsx  Skills.tsx
src/stores/: appStore.ts
