[package]
name = "clawx-rust"
version = "0.1.0"
edition = "2021"
description = "Desktop interface for OpenClaw AI Agents"
authors = ["ClawX-Rust Team"]
license = "MIT"

[lib]
name = "clawx_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
